--- a/assets/styles/header/_header.scss
+++ b/assets/styles/header/_header.scss
@@ -1,6 +1,6 @@
 .header {
    border-bottom: 1px solid #F2F2F7;
-   background-color: var(--neutral_color_white);
+   background-color: black;
 
    &-block {
       &__main {
