Table style changes

--- a/assets/styles/base/_root.scss
+++ b/assets/styles/base/_root.scss
@@ -2,12 +2,12 @@
 
     // colors
     // primary color
-    --primary_color_dark: #2DCA73;
-    --primary_color_light: #E1F7EA;
+    --primary_color_dark: #1e1e2d;
+    --primary_color_light: #d1d3e0;
 
     // grey color 
     --default_dark: #4F4F4F;
-    --default_light: #808080;
+    --default_light: #9899ac;
 
     // neutral
     --neutral_color_white: #FFFFFF;
