--- a/assets/styles/modules/_table.scss
+++ b/assets/styles/modules/_table.scss
@@ -8,7 +8,6 @@
    &-block {
       height: 525px;
       min-height: 70vh;
-      padding-right: 30px;
       border-bottom: 1px solid #E1E1E1;
 
 
@@ -67,19 +66,6 @@
                      background-color: transparent;
                   }
 
-                  .icon-burger {
-                     color: var(--default_light);
-                     opacity: 0;
-                     visibility: hidden;
-                     transition: var(--transition-global);
-                  }
-
-                  &:hover {
-                     .icon-burger {
-                        opacity: 1;
-                        visibility: visible;
-                     }
-                  }
                }
             }
          }
@@ -95,7 +81,7 @@
                }
 
                &:hover {
-                  background-color: #E1F7EA;
+                  background-color: rgba(0, 0, 0, 0.08)
                }
 
                td {
@@ -165,7 +151,7 @@
                }
 
                &:hover {
-                  background-color: #E1F7EA;
+                  background-color: rgba(0, 0, 0, 0.08);
                }
 
                td {
